# uskit

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  catalog.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: events.rs  installer.rs  lib.rs  main.rs  winget.rs
src/components/: AppCard.tsx  CategoryGrid.tsx  CategoryNav.tsx  Feed.tsx  PresetChips.tsx  QueueBadge.tsx  SelectionBar.tsx  Settings.tsx  WingetMissing.tsx
src/lib/: tauri.ts
src/store/: queue.ts
