[package]
name = "uskit"
version = "0.1.0"
description = "Quick installer for popular Windows apps"
authors = ["uskit"]
edition = "2021"

[lib]
name = "uskit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.52.3", features = ["full"] }
